Improve index page

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<link rel="mask-icon" href="/favicon.ico" color="#5bbad5" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#facc15" media="(prefers-color-scheme: light)" />
 		<meta name="theme-color" content="#3730a3" media="(prefers-color-scheme: dark)" />
